# elastoplastic_phri_controller

./: .gitignore  README.md  test_1.m  test_3d.m
elastoplastic_lugre_controller/: CMakeLists.txt  elastoplastic.plugin.xml  package.xml  plugin.xml
elastoplastic_lugre_controller/config/: elastoplastic.yaml  elastoplastic_azrael.yaml  elastoplastic_omron.yaml
elastoplastic_lugre_controller/include/elastoplastic_lugre_controller/: elastoplastic_lugre_controller.h  elastoplastic_lugre_controller.hpp  elastoplastic_model.hpp
elastoplastic_lugre_controller/launch/: load_controller.launch.py
elastoplastic_lugre_controller/src/elastoplastic_lugre_controller/: elastoplastic_controller_parameters.yaml  elastoplastic_lugre_controller.cpp  elastoplastic_lugre_controller.cpp.autosave  elastoplastic_lugre_controller.cpp.ros1  elastoplastic_model.cpp
elastoplastic_lugre_controller/test/: test_elastoplastic_controller.cpp  test_elastoplastic_controller.hpp  test_elastoplastic_model.cpp  test_params.yaml  test_urdf.hpp  test_urdf.urdf  test_with_cm.cpp
img/: alpha_and_dot_alpha.eps  alpha_and_dot_alpha.fig  base_vs_alpha_cartesian_displacement.eps  base_vs_alpha_cartesian_displacement.fig  dot_alpha.eps  dot_alpha.fig  experimental-1.eps  experimental-1.fig  experimental-2.eps  experimental-2.fig  experimental_1.m  experimental_2.m  fig_properties.m  plastic_displacement.eps  plastic_displacement.fig  with_and_without_r.eps  with_and_without_r.fig  with_r.eps  with_r.fig  without_r.eps  without_r.fig
matlab/: test_1.m  test_3d.m
matlab/img/: alpha_and_dot_alpha.eps  alpha_and_dot_alpha.fig  animation_exp_1.m  animation_exp_2.m  base_vs_alpha_cartesian_displacement.eps  base_vs_alpha_cartesian_displacement.fig  experimental-1.eps  experimental-1.fig  experimental-1a.eps  experimental-1b.eps  experimental-1c.eps  experimental-2a.eps  experimental-2b.eps  experimental-2c.eps  experimental_1.m  experimental_2.m  fig_alpha_and_dot_alpha.m  fig_properties.m  plastic_displacement.eps  plastic_displacement.fig  script_plastic_displacement.m  script_w_o_r.m  video-experimental-1.eps  video-experimental-1.fig  video-experimental-2.eps  video-experimental-2.fig  with_and_without_r.eps  with_r.eps  with_r.fig  without_r.eps  without_r.fig
