<?xml version="1.0"?>
<package format="3">
  <name>elastoplastic_lugre_controller</name>
  <version>0.0.0</version>
  <description>The elastoplastic_lugre_controller package</description>

  <maintainer email="eulero@todo.todo">eulero</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>urdfdom</depend>
  <depend>generate_parameter_library</depend>

  <depend>rdyn_core</depend>
  <depend>fmt</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
